--- a/client/index.html
+++ b/client/index.html
@@ -15,9 +15,13 @@
 
 <body>
   <div class="container">
-    <form enctype="multipart/form-data" action="/upload" method="post">
-      <input type="file" name="photo" />
-      <input type="submit" value="Upload Image" name="submit" />
+    <form enctype="multipart/form-data" action="/upload" method="post" class="form-horizontal">
+      <div class="form-group">
+        <input type="file" name="photo" class="form-control"/>
+      </div>
+      <div class="form-group">
+        <input type="submit" value="Upload Image" name="submit" class="form-control"/>
+      </div>
     </form>
   </div>
 
