refactor: change to multer library

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container">
-    <form enctype="multipart/form-data" action="/upload" method="post" class="form-horizontal">
+    <form enctype="multipart/form-data" method="post" class="form-horizontal">
       <div class="form-group">
         <input type="file" name="sampleFile" id="photo" class="form-control"/>
       </div>
@@ -36,36 +36,39 @@
   crossorigin="anonymous"></script>
   <script>
 
-  var reader = new FileReader()
-  $('#photo').change(function(){
-    console.log($("photo"))
-    reader.readAsDataURL($('#photo')[0].files[0])
-    reader.onloaded = function (e){
-      $("img").attr('src', reader.result)
-    }
-  })
-    // $('#submit').on('click', (e) => {
-    //   e.preventDefault()
-    //   console.log($('#photo').val());
-    //
-    //   if($('#photo').val() === ''){
-    //     $("#error_msg").html("Please choose your file");
-    //   }else{
-    //     console.log($('#photo').val())
-    //     $.ajax({
-    //       url         : 'http://localhost:3000/upload',
-    //       type        : 'POST',
-    //       dataType    : 'json',
-    //       contentType : 'application/x-www-form-urlencoded',
-    //       data        :
-    //         $('#photo').val()
-    //       ,
-    //       success     : (data) => {
-    //         console.log(data);
-    //       }
-    //     })
-    //   }
-    // })
+  // var reader = new FileReader()
+  // $('#photo').change(function(){
+  //   console.log($("photo"))
+  //   reader.readAsDataURL($('#photo')[0].files[0])
+  //   reader.onloaded = function (e){
+  //     $("img").attr('src', reader.result)
+  //   }
+  // })
+    /* ajax */
+    $('#submit').on('click', (e) => {
+      e.preventDefault()
+      console.log($('#photo').val());
+
+      if($('#photo').val() === ''){
+        $("#error_msg").html("Please choose your file");
+      }else{
+        // $.ajax({
+        //   url         : 'http://localhost:3000/api/upload',
+        //   type        : 'POST',
+        //   // dataType    : false,
+        //   contentType : 'application/x-www-form-urlencoded',
+        //   // data        :
+        //   //   $('#photo').val()
+        //   // ,
+        //   success     : (data) => {
+        //     console.log(data);
+        //   },
+        //   error       : (err) => {
+        //     console.log(`${err}`)
+        //   }
+        // })
+      }
+    })
 
   </script>
   <!-- Latest compiled and minified JavaScript -->
