--- a/client/upload.html
+++ b/client/upload.html
@@ -18,15 +18,19 @@
         <div class="form-group">
             <label class="control-label col-sm-2">Gambar:</label>
             <div class="col-sm-10">
-                <input type="file" class="form-control" name="gambar">
+                <input type="file" class="form-control" name="gambar" id="gambar">
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" name="uploadImage" class="btn btn-default">Submit</button>
+                <button id="submitButton" type="submit" name="uploadImage" class="btn btn-default">Submit</button>
             </div>
         </div>
     </form>
+    
+    <div id="showImg">
+        <a href=""><img src="" alt=""></a>
+    </div>
 </div>
 
 
@@ -37,47 +41,47 @@
 
 <script>
 
-    $('#formulir').submit((e) => {
-        e.preventDefault()
-        $(this).ajaxSubmit({
+    $('#submitButton').on('click', function(e) {
+        $('#formulir').ajaxSubmit({
             error: function(res) {
-                status(`Error: ${res.status}`)
+                console.log(`Error: ${res.status}`)
             },
-            success: function(response) {
-                debugger
-                console.log(response)
-//                $("#uploaded a").attr("href", `uploads/${res}`)
-//                $("#uploaded img").attr("src", `uploads/${res}`)
+            success: function(res) {
+                console.log(res)
+                $("#showImg a").attr("href", `/public/images/${res}`)
+                $("#showImg img").attr("src", `/public/images/${res}`)
+
+//                $("#status").empty()
+//                $("#uploaded").show()
+//                $("#uploaded a").attr("href", `images/${res}`)
+//                $("#uploaded img").attr("src", `images/${res}`)
             }
         })
+        e.preventDefault();
     })
 
 
-
-//    function updateCreateCustomer(customer) {
-//        var no = $('tr').length
-//        var html = `<tr id="rowCustomer${customer._id}">
-//                        <td>${no}</td>
-//                        <td>${customer.name}</td>
-//                        <td>${customer.memberId}</td>
-//                        <td>${customer.address}</td>
-//                        <td>${customer.zip}</td>
-//                        <td>${customer.phone}</td>
-//                        <td>
-//                            <span>
-//                                <button id="buttonEditCustomer${customer._id}" class="btn btn-warning" onclick="editCustomer('${customer._id}')">Edit</button>
-//                                <button id="buttonDeleteCustomer${customer._id}" class="btn btn-danger" onclick="deleteCustomer('${customer._id}')">Delete</button>
-//                            </span>
-//                        </td>
-//                    </tr>`
+    //    $('#formulir').submit((e) => {
+//        var fd = {
+//            'gambar': $('input[name=gambar]').val(),
+//        };
+//        console.log(fd)
 //
-//        $("tbody:last").append(html)
-//        $("input[name='name']").val("")
-//        $("input[name='memberId']").val("")
-//        $("input[name='address']").val("")
-//        $("input[name='zip']").val("")
-//        $("input[name='phone']").val("")
-//    }
+//        $.ajax({
+//            url: 'http://localhost:3000/api/photos/upload',
+//            data: fd,
+//            processData: false,
+//            contentType: 'multipart/form-data',
+//            type: 'POST',
+//            success: function(res) {
+//                console.log(res)
+//            }
+//        })
+//        e.preventDefault()
+//    })
+
+
+
 </script>
 
 
