benerin munculin gambar setelah upload

--- a/client/upload.html
+++ b/client/upload.html
@@ -48,8 +48,8 @@
             },
             success: function(res) {
                 console.log(res)
-                $("#showImg a").attr("href", `/public/images/${res}`)
-                $("#showImg img").attr("src", `/public/images/${res}`)
+                $("#showImg a").attr("href", `http://localhost:3000/images/${res}`)
+                $("#showImg img").attr("src", `http://localhost:3000/images/${res}`)
 
 //                $("#status").empty()
 //                $("#uploaded").show()
