--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./src/stylesheets/semantic.min.css">
   <link rel="stylesheet" href="./src/stylesheets/stylesheet.css">
   <title>Document</title>
 </head>
 <body>
 
 </body>
+<script src="./src/javascripts/jquery.min.js" charset="utf-8"></script>
+<script src="./src/javascripts/semantic.min.js" charset="utf-8"></script>
 <script src="./src/javascripts/index.js" charset="utf-8"></script>
 </html>
