add interface button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="ui container">
+  <h1 id='header file upload' class='ui green header'>File Upload</h1>
+  <div class="ui info message">
+    <p class="description" id="desc">Upload a file</p>
+    <button id='btn-upload' class="ui inverted green button">
+      Select File..
+    </button>
+  </div>
+  </div>
 
 </body>
 <script src="./src/javascripts/jquery.min.js" charset="utf-8"></script>
